--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="css/aos.css?ver=1.1.0" rel="stylesheet">
   <link href="css/bootstrap.min.css?ver=1.1.0" rel="stylesheet">
   <link href="css/main.css?ver=1.1.0" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="images/me1.jpg">
   <noscript>
     <style type="text/css">
       [data-aos] {
@@ -50,7 +51,7 @@
       <div class="profile-page">
         <div class="wrapper">
           <div class="page-header page-header-small" filter-color="green">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('images/cc-bg-1.jpg')">
+            <div class="page-header-image" data-parallax="true" style="background-image: url('images/bg.jpg')">
             </div>
             <div class="container">
               <div class="content-center">
